@@ -44,6 +44,7 @@ dist_glassplayer_SOURCES = audiodevicefactory.cpp audiodevicefactory.h\
                            dev_alsa.cpp dev_alsa.h\
                            dev_file.cpp dev_file.h\
                            dev_jack.cpp dev_jack.h\
+                           dev_mme.cpp dev_mme.h\
                            dev_portaudio.cpp dev_portaudio.h\
                            dev_stdout.cpp dev_stdout.h\
                            glassplayer.cpp glassplayer.h\
@@ -72,13 +73,14 @@ nodist_glassplayer_SOURCES = audiodevice.cpp audiodevice.h\
                              moc_dev_alsa.cpp\
                              moc_dev_file.cpp\
                              moc_dev_jack.cpp\
+                             moc_dev_mme.cpp\
                              moc_dev_portaudio.cpp\
                              moc_dev_stdout.cpp\
                              moc_glassplayer.cpp\
                              moc_serverid.cpp\
                              ringbuffer.cpp ringbuffer.h
 
-glassplayer_LDADD = @QT4CLI_LIBS@ @SNDFILE_LIBS@ @SAMPLERATE_LIBS@ @ALSA_LIBS@ @JACK_LIBS@ @ASIHPI_LIBS@ @PLATFORM_LIBS@ @PORTAUDIO_LIBS@ -lltdl
+glassplayer_LDADD = @QT4CLI_LIBS@ @SNDFILE_LIBS@ @SAMPLERATE_LIBS@ @ALSA_LIBS@ @JACK_LIBS@ @ASIHPI_LIBS@ @PLATFORM_LIBS@ @PORTAUDIO_LIBS@ @MME_LIBS@ -lltdl
 
 
 CLEANFILES = *~\
