@@ -327,3 +327,6 @@
 	* Added Ogg codec load paths for Windows in
 	'src/glassplayer/codec_ogg.cpp'.
 	* Added a 'make win32-install-ogg' target in 'Makefile.am'.
+2016-12-16 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented a Windows Multimedia audio device in
+	'src/glassplayer/dst_mme.cpp' and 'src/glassplayer/dst_mme.h'.
